# EZDeploy

./: README.md  deploy.py  deps.py  git.py  install_services.py  main.py  metrics.py  nginx.py  osdetect.py  registry.py  reloader.py  requirements.txt  service.py  stop.py
CICD/: deploy.py  deps.py  env.py  git.py  nginx.py  registry.py  reloader.py  secrets.py  service.py  stop.py
testgen/: __init__.py  pyproject.toml  test_scanner.py  testcli.py  tests.json
testgen/emitter/: pytest_emitter.py  test_emitter.py
testgen/fixtures/: billing.py
testgen/generator/: __init__.py  llm.py  schema.py
testgen/scanner/: __init__.py  ast_scanner.py  endpoint_scanner.py  serialiser.py
testgen/tests/: test_emitter.py  test_endpoint_scanner.py  test_scanner.py
testgen/tests/fixtures/: billing.py  routes.py
